s/Parser TNG/Parser 2/; renamed tng directory to new

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -35,7 +35,7 @@
            href="#modules/locked_down_feed_plugin.js">Locked-Down Feed
            Plugin</a></li>
     <li><a class="intra-wiki"
-           href="#modules/parser/tng/parser.js">Parser: The Next Generation</a></li>
+           href="#modules/parser/new/parser.js">Parser 2</a></li>
   </ul>
   <p>We also have some of our standard feeds documented:</p>
   <ul>
