Started splitting the developer-oriented info out to a separate page (develop.html) so that the front page of about:ubiquity can focus on info for new users.  The current division of info is a work in progress.  I'm going to be doing a bunch more commits moving stuff around.

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -115,11 +115,11 @@
   
   <div id="nav-container">
     <ul id="nav">
-      <li><a href="about:ubiquity">Home</a></li>
-      <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
-      <li><a href="chrome://ubiquity/content/skinlist.html">Your Skins</a></li>
+      <li><a href="about:ubiquity">Tutorial</a></li>
+      <li><a href="chrome://ubiquity/content/cmdlist.html">Commands</a></li>
+      <li><a href="chrome://ubiquity/content/skinlist.html">Skins</a></li>
       <li><a href="chrome://ubiquity/content/editor.html">Command Editor</a></li>
-      <li><a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_User_Tutorial">Tutorial</a></li>
+      <li><a href="chrome://ubiquity/content/develop.html">Developer Center</a></li>
     </ul>  
   </div>
 
