--- a/ubiquity/modules/parser/new/index.html
+++ b/ubiquity/modules/parser/new/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <title>Ubiquity Parser TNG Demo</title>
-    <script src="/mint/?js" type="text/javascript"></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='jquery-1.3.2.js'></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='parser.js'></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='nountypes.js'></script>
@@ -161,7 +160,7 @@
     <div id='parseinfo'></div>
 
     <div id='idc-container'></div>
-    <script type='text/javascript' src='http://www.intensedebate.com/js/wordpressTemplateCommentWrapper2.php?acct=4c201f64e36667e80e8b86f6ab53c737&amp;postid=1590&amp;title=Ubiquity+Parser%3A+The+Next+Generation+Demo&amp;url=http://mitcho.com/blog/projects/ubiquity-parser-the-next-generation-demo/&amp;posttime=2009-03-18+03%3A13%3A17&amp;postauthor=mitcho&amp;guid=http%3A%2F%2Fmitcho.com%2Fblog%2F%3Fp%3D1590'></script>
+    <!--<script type='text/javascript' src='http://www.intensedebate.com/js/wordpressTemplateCommentWrapper2.php?acct=4c201f64e36667e80e8b86f6ab53c737&amp;postid=1590&amp;title=Ubiquity+Parser%3A+The+Next+Generation+Demo&amp;url=http://mitcho.com/blog/projects/ubiquity-parser-the-next-generation-demo/&amp;posttime=2009-03-18+03%3A13%3A17&amp;postauthor=mitcho&amp;guid=http%3A%2F%2Fmitcho.com%2Fblog%2F%3Fp%3D1590'></script>-->
 
   </div>
   </body>
