--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -21,13 +21,17 @@
 <div id="nav-container">
   <ul id="nav">
     <li><a href="about:ubiquity">Tutorial</a></li>
-    <li><a href="chrome://ubiquity/content/cmdlist.html">Commands</a></li>
-    <li><a href="chrome://ubiquity/content/skinlist.html">Skins</a></li>
+    <li><a href="chrome://ubiquity/content/skinlist.html">Settings</a></li>
+    <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
+    <li><a href="https://ubiquity.mozilla.com/herd/">Get New Commands</a></li>
+    <li><a href="chrome://ubiquity/content/report-bug.html">Report a Bug</a></li>
     <li><a href="chrome://ubiquity/content/editor.html">Command Editor</a></li>
     <li><a href="chrome://ubiquity/content/develop.html">Developer Center</a></li>
 </div>
 
 <br clear="all"/>
+
+You can get to this page at any time using the "Command-list" command.
 
 <div id="sort-container">
   Sort commands by
