--- a/ubiquity/chrome/content/develop.html
+++ b/ubiquity/chrome/content/develop.html
@@ -26,8 +26,10 @@
   <div id="nav-container">
   <ul id="nav">
     <li><a href="about:ubiquity">Tutorial</a></li>
-    <li><a href="chrome://ubiquity/content/cmdlist.html">Commands</a></li>
-    <li><a href="chrome://ubiquity/content/skinlist.html">Skins</a></li>
+    <li><a href="chrome://ubiquity/content/skinlist.html">Settings</a></li>
+    <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
+    <li><a href="https://ubiquity.mozilla.com/herd/">Get New Commands</a></li>
+    <li><a href="chrome://ubiquity/content/report-bug.html">Report a Bug</a></li>
     <li><a href="chrome://ubiquity/content/editor.html">Command Editor</a></li>
     <li><a href="chrome://ubiquity/content/develop.html">Developer Center</a></li>
   </ul>  
@@ -81,7 +83,7 @@
 </div>
 
 <div class="col-four">
-  <h2>News</h2>
+  <h2>Latest Ubiquity Code Changes</h2>
   <div id="news"></div>
 
   
