Made the interactive tutorial show the right key combo message to the user.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -81,5 +81,6 @@
         src="chrome://ubiquity/content/about.js"></script>
 <script type="application/javascript;version=1.8"
         src="chrome://ubiquity/content/tutorial.js"></script>
+<script type="text/javascript" src="prefkeys.js"></script>
 
 </html>
