about:ubiquity page and its child pages now have less duplicated code, because I moved the navbar header thing out to header.js which is now included in all of them.

--- a/ubiquity/chrome/content/develop.html
+++ b/ubiquity/chrome/content/develop.html
@@ -12,6 +12,9 @@
           src="resource://ubiquity/scripts/jsparser.js"></script>
   <script type="text/javascript"
           src="resource://ubiquity/scripts/jquery.js"></script>
+  <script type="application/javascript;version=1.8"
+        src="chrome://ubiquity/content/header.js"></script>
+
   
   <title>Develop Ubiquity</title>
 </head>
@@ -23,17 +26,7 @@
     Type What You Want To Do
   </div>
 
-  <div id="nav-container">
-  <ul id="nav">
-    <li><a href="about:ubiquity">Tutorial</a></li>
-    <li><a href="chrome://ubiquity/content/skinlist.html">Settings</a></li>
-    <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
-    <li><a href="https://ubiquity.mozilla.com/herd/">Get New Commands</a></li>
-    <li><a href="chrome://ubiquity/content/report-bug.html">Report a Bug</a></li>
-    <li><a href="chrome://ubiquity/content/editor.html">Command Editor</a></li>
-    <li><a href="chrome://ubiquity/content/develop.html">Developer Center</a></li>
-  </ul>  
-</div>
+  <div id="nav-container"></div>
 
 <br clear="all"/>
 <br clear="all"/>
