--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -15,24 +15,15 @@
 <body>
 <script type="text/javascript" src="prefkeys.js"></script>
 <script src="resource://ubiquity/scripts/jquery.js"></script>
+<script type="application/javascript;version=1.8"
+        src="chrome://ubiquity/content/header.js"></script>
 <script src="skinlist.js"></script>
 
 <div class="head">
   <span class="large">Ubiquity:</span> Settings And Skins</span>
 </div>
 
-<div id="nav-container">
-  <ul id="nav">
-    <li><a href="about:ubiquity">Tutorial</a></li>
-    <li><a href="chrome://ubiquity/content/skinlist.html">Settings</a></li>
-    <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
-    <li><a href="https://ubiquity.mozilla.com/herd/">Get New Commands</a></li>
-    <li><a href="chrome://ubiquity/content/report-bug.html">Report a Bug</a></li>
-    <li><a href="chrome://ubiquity/content/editor.html">Command Editor</a></li>
-    <li><a href="chrome://ubiquity/content/develop.html">Developer Center</a></li>
-  </ul>  
-</div>
-
+<div id="nav-container"></div>
 
 <br clear="all"/>
 <div style="text-align:center;"><p>You can get to this page at any time using the "Skin-list" command.</p></div>
