--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -23,16 +23,6 @@
   </div>
     
 <div id="nav-container">
-  <ul id="nav">
-    <li><a href="about:ubiquity">Tutorial</a></li>
-    <li><a href="chrome://ubiquity/content/skinlist.html">Settings</a></li>
-    <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
-    <li><a href="https://ubiquity.mozilla.com/herd/">Get New Commands</a></li>
-    <li><a href="chrome://ubiquity/content/report-bug.html">Report a Bug</a></li>
-    <li><a href="chrome://ubiquity/content/editor.html">Command Editor</a></li>
-    <li><a href="chrome://ubiquity/content/develop.html">Developer Center</a></li>
-
-  </ul>  
 </div>
 
 <br clear="all"/>
@@ -74,11 +64,11 @@
 <br clear="all"/>
 
 
-
-
 </body>
 <script type="application/javascript;version=1.7"
         src="chrome://ubiquity/content/about.js"></script>
+<script type="application/javascript;version=1.8"
+        src="chrome://ubiquity/content/header.js"></script>
 <script type="application/javascript;version=1.8"
         src="chrome://ubiquity/content/tutorial.js"></script>
 <script type="text/javascript" src="prefkeys.js"></script>
