--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 <script src="resource://ubiquity/scripts/jquery.js"></script>
+<script type="application/javascript;version=1.8"
+        src="chrome://ubiquity/content/header.js"></script>
 <script type="application/javascript;version=1.7"
         src="cmdlist.js"></script>
 
@@ -18,16 +20,7 @@
 </div>
 
 
-<div id="nav-container">
-  <ul id="nav">
-    <li><a href="about:ubiquity">Tutorial</a></li>
-    <li><a href="chrome://ubiquity/content/skinlist.html">Settings</a></li>
-    <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
-    <li><a href="https://ubiquity.mozilla.com/herd/">Get New Commands</a></li>
-    <li><a href="chrome://ubiquity/content/report-bug.html">Report a Bug</a></li>
-    <li><a href="chrome://ubiquity/content/editor.html">Command Editor</a></li>
-    <li><a href="chrome://ubiquity/content/develop.html">Developer Center</a></li>
-</div>
+<div id="nav-container"></div>
 
 <br clear="all"/>
 
