--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -8,6 +8,8 @@
   <link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
   <script type="text/javascript"
           src="resource://ubiquity/scripts/jquery.js"></script>
+  <script type="application/javascript;version=1.8"
+        src="chrome://ubiquity/content/header.js"></script>
   <script type="application/javascript;version=1.7"
           src="editor.js"></script>
   <script type="application/javascript;version=1.7"
@@ -113,17 +115,7 @@
     <red>ubiquity</red> the command <em>editor</em></span>
   </div>
   
-  <div id="nav-container">
-    <ul id="nav">
-      <li><a href="about:ubiquity">Tutorial</a></li>
-      <li><a href="chrome://ubiquity/content/skinlist.html">Settings</a></li>
-      <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
-      <li><a href="https://ubiquity.mozilla.com/herd/">Get New Commands</a></li>
-      <li><a href="chrome://ubiquity/content/report-bug.html">Report a Bug</a></li>
-      <li><a href="chrome://ubiquity/content/editor.html">Command  Editor</a></li>
-      <li><a href="chrome://ubiquity/content/develop.html">Developer Center</a></li>
-    </ul>  
-  </div>
+  <div id="nav-container"></div>
 
   <br clear="all"/>
 
