--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -9,94 +9,93 @@
   <title>Ubiquity Skins</title>
   <style>
     .warning{ background-color: #FFFCBA; border: 1px solid #F09B9A; width: 740px; padding: 5px;}
-  
   </style>
 </head>
 <body>
-<script type="text/javascript" src="prefkeys.js"></script>
-<script src="resource://ubiquity/scripts/jquery.js"></script>
-<script type="application/javascript;version=1.8"
-        src="chrome://ubiquity/content/header.js"></script>
-<script src="skinlist.js"></script>
+  <script type="text/javascript" src="prefkeys.js"></script>
+  <script src="resource://ubiquity/scripts/jquery.js"></script>
+  <script type="application/javascript;version=1.8"
+          src="chrome://ubiquity/content/header.js"></script>
+  <script src="skinlist.js"></script>
 
-<div class="head">
-  <span class="large">Ubiquity:</span> Settings And Skins</span>
-</div>
-
-<div id="nav-container"></div>
-
-<br clear="all"/>
-<div style="text-align:center;"><p>You can get to this page at any time using the "Skin-list" command.</p></div>
-<br clear="all"/>
-
-<div class="col-five">
-
-  <h2 class="top">Skins</h2>
-<ul id="skin-list"></ul>
-
-<ul class="button-list">
-  <li>
-    <a class="button" id="edit-button" 
-       href="javascript:openSkinEditor();">
-       Edit Custom Skin</a>
-  </li>
-</ul>
-
-</div>
-
-<div class="col-four">
-  <h2 class="top">Key Combination</h2>
-  <strong>Invoke</strong> Ubiquity by pressing:</legend>
-  <div style="margin-left:10px;"><p>
-  <input id="keyInputBox" type="text" size="27"
-         style="cursor:pointer"
-         onkeydown="PrefKeys.onKeyChange(event)" 
-         onfocus="this.value = 'Press your combination'"
-         onblur="PrefKeys.onLoad()"/><br/>
-  Click above to <strong>Change</strong> the keyboard shortcut used to open Ubiquity. <br/></p>
-  <p id="keyNotify"></p>
+  <div class="head">
+    <span class="large">Ubiquity:&nbsp;</span>
+    Settings And Skins
   </div>
 
-  <h2>Language Settings</h2>
-  <p>Coming soon.</p>
+  <div id="nav-container"></div>
 
+  <br clear="all"/>
+  <div style="text-align:center;">
+    <p>You can get to this page at any time using the "Skin-list" command.</p>
+  </div>
+  <br clear="all"/>
 
-  <h2>Troubleshooting Ubiquity</h2>
+  <div class="col-five">
+    <h2 class="top">Skins</h2>
+    <ul id="skin-list"></ul>
 
-  <p>Due to Ubiquity's unusual nature as a Labs experiment, you may
-  run into problems while using it.  If Ubiquity becomes completely
-  unresponsive to you, then it may be necessary to reset it to its
-  "factory defaults" in order to use it again.  To do this, click <a
-  href="reset.html">here</a>&mdash;and our apologies for the
-  inconvenience!</p>
+    <ul class="button-list">
+      <li>
+        <a class="button" id="edit-button" 
+           href="javascript:openSkinEditor();">
+           Edit Custom Skin</a>
+      </li>
+    </ul>
+  </div>
 
-</div>
+  <div class="col-four">
+    <h2 class="top">Key Combination</h2>
+    <strong>Invoke</strong> Ubiquity by pressing:</legend>
+    <div style="margin-left:10px;">
+      <p>
+      <input id="keyInputBox" type="text" size="27"
+             style="cursor:pointer"
+             onkeydown="PrefKeys.onKeyChange(event)" 
+             onfocus="this.value = 'Press your combination'"
+             onblur="PrefKeys.onLoad()"/><br/>
+      Click above to <strong>Change</strong> the keyboard shortcut used to open
+      Ubiquity. <br/></p>
+    <p id="keyNotify"></p>
+    </div>
 
-<br clear="all"/>
+    <h2>Language Settings</h2>
+    <p>Coming soon.</p>
 
-<div id="editor-div" style="display:none">
+    <h2>Troubleshooting Ubiquity</h2>
+    <p>Due to Ubiquity's unusual nature as a Labs experiment, you may
+    run into problems while using it.  If Ubiquity becomes completely
+    unresponsive to you, then it may be necessary to reset it to its
+    "factory defaults" in order to use it again.  To do this, click <a
+    href="reset.html">here</a>&mdash;and our apologies for the
+    inconvenience!</p>
+  </div>
 
-  <h2>Custom Skin Editor</h2>
-  <ul class="button-list">
-    <li>
-      <a type="button" class="button" href="javascript:saveCustomSkin();">Save</a>
-      <a type="button" class="button" href="javascript:pasteToGist();">Share</a>
+  <br clear="all"/>
+
+  <div id="editor-div" style="display:none">
+    <h2>Custom Skin Editor</h2>
+    <ul class="button-list">
+      <li>
+        <a type="button" class="button"
+           href="javascript:saveCustomSkin();">Save</a>
+        <a type="button" class="button"
+           href="javascript:pasteToGist();">Share</a>
       Clicking save immediately updates Ubiquity's look.
-    </li>
-    <br/><br/>
+      </li>
+      <br/><br/>
       <div class="warning">If you are using Windows, then any changes you make to a custom skin can only be seen after a browser restart. This is a <a href="http://ubiquity.mozilla.com/trac/ticket/449">known bug</a>.</div>
-    <br/><br/>
-    <li>
-      <textarea rows="30" style="width:750px" id="skin-editor"></textarea>
-    </li>
-  </ul>  
-</div>
+      <br/><br/>
+      <li>
+        <textarea rows="30" style="width:750px" id="skin-editor"></textarea>
+      </li>
+    </ul>  
+  </div>
   
-
-<script>
-  Components.utils.import("resource://ubiquity/modules/utils.js");
-  $(document).ready(onDocumentLoad);
-</script>
+  <script>
+    Components.utils.import("resource://ubiquity/modules/utils.js");
+    $(document).ready(onDocumentLoad);
+  </script>
 
 </body>
 </html>
