Made the styling of the 'get back to this page with the foo command' messages consistent across pages.

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -22,9 +22,11 @@
 
 <div id="nav-container"></div>
 
-<br clear="all"/>
-
-You can get to this page at any time using the "Command-list" command.
+  <br clear="all"/>
+  <div style="text-align:center;">
+    <p>You can get to this page at any time using the "Command-list" command.</p>
+  </div>
+  <br clear="all"/>
 
 <div id="sort-container">
   Sort commands by
