--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -111,15 +111,18 @@
 </head>
 
 <body onload="initialize(); Editor.onLoad(); highlight();">
-  <div class="head left">
-    <red>ubiquity</red> the command <em>editor</em></span>
+  <div class="head">
+    <span class="large">Ubiquity:&nbsp;</span>
+    Hack It
   </div>
   
   <div id="nav-container"></div>
 
   <br clear="all"/>
-
-  You can get to this page at any time using the "Command-editor" command.
+  <div style="text-align:center;">
+    <p>You can get to this page at any time using the "Command-editor" command.</p>
+  </div>
+  <br clear="all"/>
     
   <h1>Ubiquity Command Editor</h1>
   <p id="notification-bar" class="notification" style="display:none"></p>
