Moved subscribed feed list to cmdlist page, moved developer news and info to command editor page, got rid of develop.html and about.js.
--HG--
rename : ubiquity/chrome/content/about.js => ubiquity/chrome/content/developer-news.js

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -28,6 +28,22 @@
   </div>
   <br clear="all"/>
 
+
+  <div id="command-feeds-div">
+    <h2>Subscribed Feeds</h2>
+      <p id="command-feeds-header">You're currently subscribed to these command
+      feeds:</p>
+      <ul id="command-feeds"></ul>
+  </div>
+
+  <div id="command-feed-graveyard-div">
+    <h2>Feed Graveyard</h2>
+      <p id="command-feed-graveyard-header">You've recently unsubscribed to these command
+      feeds:</p>
+      <ul id="command-feed-graveyard"></ul>
+  </div>
+
+
 <div id="sort-container">
   Sort commands by
   <select id="sortby" size="1">
