new-parser: adding Catalan parser!

--- a/ubiquity/modules/parser/new/index.html
+++ b/ubiquity/modules/parser/new/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript;version=1.8" charset='utf-8' src='da.js'></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='sv.js'></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='pt.js'></script>
+    <script type="text/javascript;version=1.8" charset='utf-8' src='ca.js'></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='setup.js'></script>
     <style type="text/css">
 			body {
@@ -109,7 +110,8 @@
     <input type='radio' name='lang' value='da'>Danish</input>
     <input type='radio' name='lang' value='sv'>Swedish</input>
     <input type='radio' name='lang' value='pt'>Portuguese</input>
-    <input type='radio' name='lang' value='fr'>French</input><!--
+    <input type='radio' name='lang' value='fr'>French</input>
+    <input type='radio' name='lang' value='ca'>Catalan</input><!--
     (<input type='checkbox' value='spaces' name='spaces' id='spaces'>require spaces</input>)<br/>
     <input type='checkbox' value='adjust' name='adjust' id='adjust'>adjust input widths (buggy!)</input>-->
     <br/>
