--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -6,41 +6,30 @@
 <!-- Load scripts, etc. for the extension here. -->
 <script src="js/init-extension.js"></script>
 <script src="js/jquery.js"></script>
-<script src="js/track.js"></script>
 <script src="js/observe.js"></script>
 <script>
 // Just some sample code.
+Components.utils.import("resource://jetpack/modules/jetpack_feed_plugin.js");
 
-function SomeClass() {
-  this.id = SomeClass._id++;
-}
-
-SomeClass._id = 0;
-
-SomeClass.prototype = {
-  toString: function toString() {
-    return "[SomeClass " + this.id + "]";
-  }
-};
-
-function logTracked() {
-  MemoryTracking.track(new SomeClass(), "SomeClass");
-  $(document.body).text(MemoryTracking.getLiveObjects("SomeClass").join(", "));
-}
-
-$(window).ready(
-function() {
-  if (WindowWatcher.isSupported()) {
-    var ww = new WindowWatcher();
-    ww.onWindowOpened = function(win) {
-      console.log("Window opened.", win);
-    }
-    ww.onWindowClosed = function(window) {
-      console.log("Window closed.", window);
-    }
-  }
-  window.setInterval(logTracked, 1000);
+if (JetpackFeedManager) {
+  var watcher = new EventHubWatcher(JetpackFeedManager);
+  watcher.add("feed-change", function(name, uri) {
+    if (uri.spec in JetpackFeeds)
+      console.log("jetpack feed event: " + name + " at", uri.spec);
   });
+} else
+  console.log("JetpackFeedManager is null");
+
+function tick() {
+  var urls = [];
+  for (url in JetpackFeeds)
+    urls.push(url);
+  $(document.body).text(urls.join(", "));
+}
+
+$(window).ready(function() {
+  window.setInterval(tick, 1000);
+});
 </script>
 </body>
 </html>
