Added some memory tracking to paged extension system
--HG--
extra : rebase_source : f3e76b55850e12a708d97fa2787846d5f9067002

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -10,6 +10,7 @@
 <script>
 // Just some sample code.
 Components.utils.import("resource://jetpack/modules/jetpack_feed_plugin.js");
+Components.utils.import("resource://jetpack/modules/init.js");
 
 if (JetpackFeedManager) {
   var watcher = new EventHubWatcher(JetpackFeedManager);
@@ -24,7 +25,8 @@ function tick() {
   var urls = [];
   for (url in JetpackFeeds)
     urls.push(url);
-  $(document.body).text(urls.join(", "));
+  var numWeakRefs = getExtensionDebugInfo().weakRefs.length;
+  $(document.body).text(urls.join(", ") + " " + numWeakRefs);
 }
 
 $(window).ready(function() {
