--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -1,37 +1,25 @@
 <html>
 <head>
-  <title>Extension</title>
+  <link rel="stylesheet" type="text/css" media="all"
+        href="css/index.css" />
+  <title>I am Jetpack.</title>
 </head>
 <body>
+<h1>I am Jetpack.</h1>
+<p>Here are the Jetpacks that are currently installed.</p>
+<div id="jetpacks"></div>
+<h2>Debugging Information</h2>
+<p>Extension page weak references: <span id="extension-weakrefs"></span></p>
+<p>Reloading this page will reload Jetpack. Any errors or logging
+messages made by Jetpacks will be shown in
+the <span id="firebug-console">Firebug Console</span>, assuming you have
+it installed. If you don't have Firebug, they will appear in
+the <span id="js-error-console">JS Error Console</span>.</p>
 <!-- Load scripts, etc. for the extension here. -->
 <script src="js/init-extension.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/observe.js"></script>
-<script>
-// Just some sample code.
-Components.utils.import("resource://jetpack/modules/jetpack_feed_plugin.js");
-Components.utils.import("resource://jetpack/modules/init.js");
-
-if (JetpackFeedManager) {
-  var watcher = new EventHubWatcher(JetpackFeedManager);
-  watcher.add("feed-change", function(name, uri) {
-    if (uri.spec in JetpackFeeds)
-      console.log("jetpack feed event: " + name + " at", uri.spec);
-  });
-} else
-  console.log("JetpackFeedManager is null");
-
-function tick() {
-  var urls = [];
-  for (url in JetpackFeeds)
-    urls.push(url);
-  var numWeakRefs = getExtensionDebugInfo().weakRefs.length;
-  $(document.body).text(urls.join(", ") + " " + numWeakRefs);
-}
-
-$(window).ready(function() {
-  window.setInterval(tick, 1000);
-});
-</script>
+<script type="application/javascript;version=1.7"
+        src="js/jetpack.js"></script>
 </body>
 </html>
