Added a forAllBrowsers() function to jetpack.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -28,6 +28,7 @@ problems and inspect live objects.</p>
 <!-- Load scripts, etc. for the extension here. -->
 <script src="js/init-extension.js"></script>
 <script src="js/jquery.js"></script>
+<script src="js/track.js"></script>
 <script src="js/observe.js"></script>
 <script type="application/javascript;version=1.7"
         src="js/jetpack.js"></script>
