Added prototype of status bar panel functionality to jetpack.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -30,6 +30,7 @@ problems and inspect live objects.</p>
 <script src="js/jquery.js"></script>
 <script src="js/track.js"></script>
 <script src="js/observe.js"></script>
+<script src="js/status-bar-panel.js"></script>
 <script type="application/javascript;version=1.7"
         src="js/jetpack.js"></script>
 </body>
