jetpack is now accessible at about:jetpack.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
+  <base href="chrome://jetpack/content/"/>
+  <base target="_blank"/>
   <link rel="stylesheet" type="text/css" media="all"
         href="css/index.css" />
   <title>I am Jetpack.</title>
-  <base target="_blank"/>
 </head>
 <body>
 <h1>I am Jetpack.</h1>
