Refactored logging and made firebug logging report the proper line that a log message occurred on.

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -27,10 +27,8 @@ this page, and then reload this page, all logging messages will be
 logged to the Firebug Console, where it's much easier to debug
 problems and inspect live objects.</p>
 <!-- Load scripts, etc. for the extension here. -->
-<script>
-
-</script>
 <script src="js/init-extension.js"></script>
+<script src="js/log.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/track.js"></script>
 <script src="js/observe.js"></script>
