Much more detailed information on live weak references now; also consolidated some memory tracking code.
--HG--
extra : rebase_source : 38f46121bf6b204c4a5687deed7435249957b61d

--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -11,12 +11,9 @@
 <p>Here are the Jetpacks that are currently installed.</p>
 <div id="jetpacks"></div>
 <h2>Debugging Information</h2>
-<p>Extension page weak references: <span
-id="extension-weakrefs"></span> <span class="buttony"
-id="force-gc">force garbage collection</span></p>
-<p>If there's more than one weak reference in existence, then either
-some of them are waiting to be garbage collected, or a Jetpack has
-memory leaks.</p>
+<p>Extension page weak references:</p>
+<div id="extension-weakrefs"></div>
+<p><span class="buttony" id="force-gc">force garbage collection</span></p>
 <p>Reloading this page will reload Jetpack.</p>
 <p id="firebug-not-found" class="warning">You either don't have
 Firebug installed, or you don't have it enabled for this page, so all
