--- a/ubiquity/jetpack/content/index.html
+++ b/ubiquity/jetpack/content/index.html
@@ -33,6 +33,7 @@ problems and inspect live objects.</p>
 <script src="js/log.js"></script>
 <script src="js/observe.js"></script>
 <script src="js/status-bar-panel.js"></script>
+<script src="js/jetpack-library.js"></script>
 <script src="js/jetpack.js"></script>
 <script src="js/test.js"></script>
 <script src="js/tests/test_log.js"></script>
